tests/expectations/parser/identifiers/reserved_identifier_fail.out
Error [EPAR0370005]: expected an identifier, '(' -- found 'constructor'
    --> test:8:9
     |
   8 |     let constructor: u32 = 42u32;
     |         ^^^^^^^^^^^
